app/assets/stylesheets/organizations.css.scss
div.organization-sidebar {
  min-width: 200px;
  margin-left: 20px;
}

div.organization-logo {
  width: 200px;
  height: 100px;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

div.organization {
  margin-top: 10px;
  min-height: 150px;
}
  
@media screen and (min-width: 768px) {
  div.organization-content {
    margin-right: 220px;
  }
}

div.organization-summary {
  border-bottom: 1px solid #7ebbe4;
  padding-bottom: 10px;
  min-height: 140px;
}

div.organization-summary div.organization-logo {
  margin-top: 20px;
  margin-bottom: 20px;
}

div.organization-summary div.organization-description {
  min-height: auto;
}

div.organization-summary div.organization-description a.btn::after {
  content: ' \00BB';
}

span.contact-detail {
  margin-right: 20px;
  display: block;
}

span.contact-point-description {
  display: none;
}

#organization-details input:required, #organization-details textarea:required {
	background-color: #FFC;
}

.alpha-group.pagination {
  ul {
    box-shadow: none;
  }

  li > a {
    border: none;
  }

  .active > a {
    background: transparent;
  }
}

.organization mark {
  font-weight: normal;
  background: #e5e5e5;
  color: inherit;
}

